--- a/desktop/desktop.html
+++ b/desktop/desktop.html
@@ -55,7 +55,16 @@
                 <h1>Omnilite DEX</h1>
             </article>
             <article>
-                <h1>Welcome Chikun</h1>
+                <h1 style="font-size: clamp(1.5rem, 4vw, 3.1415rem);">Welcome Chikun</h1>
+                <h2>&darr; READ THIS &darr;</h2>
+                <p>LiteWorlds is a development Tool<br>It is experimental Software - Enter on your own Risk<br>This Website is an example usecase</p>
+                <p>For more Informations you can visit our <a href="https://discord.com/invite/H3RDCkU35C" target="_blank">Discord</a><br> or read the <a href="https://github.com/M0n0chr0mic0rn/LiteWorldsQuest" target="_blank">GitHub Repository</a></p>
+                <p>LiteWorlds offers a custodial Wallet which is created as<br>Payment-Processor<br>Not as store of value over time!</p>
+                <p>A self custody version will follow soon<br>We work on a - connect your local node - option aswell</p>
+                <p>This Website is constructed on Linux Ubuntu<br>1920x1080 Pixel using Firefox<br>Display issues may occure on a other<br>OperatingSystem, Resolution or Browser</p>
+                <p>LiteWorlds has it focus on <a href="https://litecoin.com" target="_blank">Litecoin</a> which is a commodity<br>We are also using <a href="https://kotia.cash" target="_blank">KotiaCash</a> as PlayGround for new stuff</p>
+                <p>There is no exchange between Litecoin and KotiaCash offered on LiteWorlds<br>Working exchange options between Litecoin and Litecoin-Assets (Omnilite/Ordinals/Runes) are for illustrative purposes only</p>
+                <h3>Welcome to the Litecoin Rainbow Road<br>Made by Monochromicorn @tbuuol</h3>
             </article>
             <article>
                 <h1>Omnilite NFTraderBot</h1>
